--- a/Projects/xxdCmdb/web/templates/docker_base.html
+++ b/Projects/xxdCmdb/web/templates/docker_base.html
@@ -20,6 +20,7 @@
 
     <link href="/static/css/kendo.common.min.css" rel="stylesheet">
     <link href="/static/css/bk.css" rel="stylesheet">
+    {% block css %}{% endblock %}
 </head>
 <body>
 <div class="pg-header">
